# torchfactors

./: .flake8  Makefile  README.md  demo.py  pyproject.toml  pytest.ini
.github/workflows/: experiments.yml  main.yml
examples/: bigram.py  bigram2.py  bitlm.py  bits.py  bits2.py  bits_lightning.py  blank.py  broken.py  mnist.ipynb  mnist2.ipynb  recase.py  sprlit.py  unigram.py
examples/language/: demo.py  torchfactors.py
examples/spr/: data.py  ordinal_spr.py  spr.py  sprlit.py
my_examples/: baselines.py  factors.py  myhydra.py  sprl.py  test_baselines.py  test_sample.py  thesis_utils.py
my_examples/conf/: sge.yaml  sge_gpu.yaml
my_examples/sprl/: __init__.py  data.py  model.py
src/config/: __init__.py  config.py
src/torchfactors/: __init__.py  bp.py  clique.py  domain.py  einsum.py  factor.py  factor_graph.py  infer.py  inferencer.py  learning.py  lightning.py  model.py  model_inferencer.py  skip_some_warnings.py  strategy.py  subject.py  testing.py  types.py  utils.py  variable.py
src/torchfactors/components/: at_least.py  binary.py  collapsed_prop_odds.py  latent_binary.py  linear_factor.py  nominal.py  prop_odds.py  stereotype.py  tensor_factor.py
src/torchfactors/inferencers/: bp.py  brute_force.py
src/torchfactors/log_einsum/: __init__.py
src/torchfactors/strategies/: bethe_graph.py
src/torchfactors_lightning/: __init__.py  extra_utils.py  lightning.py
src/wrap/: __init__.py  core.py  resolvers.py  skip_some_warnings.py
tests/: test_clique_models.py  test_domain.py  test_einsum.py  test_factor.py  test_factor_graph.py  test_infer.py  test_learning.py  test_lightning.py  test_linear_factor.py  test_model.py  test_model_inferencer.py  test_sample.py  test_strategy.py  test_subject.py  test_types.py  test_utils.py  test_variable.py
tests/torchfactors/: test_brute_force.py  test_clique_models.py  test_domain.py  test_factor_graph.py  test_infer.py  test_learning.py  test_linear_factor.py  test_model.py  test_subject.py  test_types.py  test_utils.py  test_variable.py
tests/torchfactors_lightning/: test_extra_utils.py  test_lightning.py
tests/wrap/: test_resolvers.py
