[tool.poetry]
name = "torchfactors"
version = "0.4.4"
description = "differentiable generalized belief propagation with pytorch"
authors = ["Adam Teichert"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
multimethod = "^1.5"
torchmetrics = "^0.6.0"
tqdm = "^4.61.1"
networkx = "^2.6.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
ipykernel = "^5.5.5"
mypy = "^0.930"
# mypy = { git = "https://github.com/python/mypy", rev = "cee5d3e9a29f43a10a8eeca760976657bf1689c9" }
pdoc = "^6.3.1"
pytest = "^6.2.2"
pytest-codeblocks = "^0.11.1"
pytest-cov = "^2.11.1"
rope = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
