[tool.poetry]
name = "torchfactors"
version = "0.4.5"
description = "differentiable generalized belief propagation with pytorch"
authors = ["Adam Teichert"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
# torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
# torch = "^1.11.0"
# torch = "^1.11.0+cpu"
torch = "^1.11.0"
multimethod = "^1.5"
tqdm = "^4.61.1"
networkx = "^2.6.2"
numpy = "^1.22.4"
torchmetrics = "^0.8.2"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
ipykernel = "^5.5.5"
mypy = "^0.960"
pdoc = "^6.3.1"
pytest = "^7.1.2"
pytest-codeblocks = "^0.11.1"
pytest-cov = "^2.11.1"
rope = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
